--- a/kakaobank.html
+++ b/kakaobank.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<DOCTYPE html>
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>kakaobank</title>
 
-  <link rel="stylesheet" href="./css/kakao.css">
+  <link rel="stylesheet" href="./kakao.css">
   <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css" rel="stylesheet">
 
   <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
@@ -17,7 +17,7 @@
   <div class="kakaohead">
     <div class="kakaosub">
       <a href="kakaobank.html" class="kakaobank">
-        <img src="../kakaobank/kaka.img/logo_black.svg" alt="kakaobank">
+        <img src="./kaka.img/logo_black.svg" alt="kakaobank">
       </a>
       
       <div class="kakao-mn">
@@ -36,7 +36,7 @@
         </select>
 
         <a href="#" class="icon">
-          <img src="../kakaobank/kaka.img/icon_eng.svg" alt="icon">
+          <img src="./kaka.img/icon_eng.svg" alt="icon">
         </a>
       </div>
     </div>
@@ -57,7 +57,7 @@
 
 <section>
   <div class="jo-content">
-    <img src="../kakaobank/kaka.img/main-withdrawal.png" alt="">
+    <img src="./kaka.img/main-withdrawal.png" alt="">
     <div class="con-font">
       <h3>모바일로 더 손쉬운 <br>계좌개설, 간편한 이체</h3>
       <p>인증서, OTP 없이 개좌 개설이 간편합니다.<br>
@@ -76,16 +76,16 @@
       카카오뱅크의 예금, 적금은 숨겨진 우대조건 없이 누구에게나 편리하고 합리적입니다.</p>
       <a href="#"><button>정기예금 ></button></a>
       <a href="#"><button>정기예금 ></button></a>
-      <img src="../kakaobank/kaka.img/main-savings-money.png" alt="">
+      <img src="./kaka.img/main-savings-money.png" alt="">
     </div>
 
-    <img src="../kakaobank/kaka.img/main-savings.png" alt="">
+    <img src="./kaka.img/main-savings.png" alt="">
   </div>
 </section>
 
 <section>
   <div class="content-3">
-    <img src="../kakaobank/kaka.img/main-moim.png" alt="">
+    <img src="./kaka.img/main-moim.png" alt="">
 
     <div class="traveling">
       <h3>함께 쓰고 같이 보는<br>모임통장</h3>
@@ -106,13 +106,13 @@
       <a href="#"><button>26주적금 ></button></a>
     </div>
 
-    <img src="../kakaobank/kaka.img/main-26weeks.png" alt="">
+    <img src="./kaka.img/main-26weeks.png" alt="">
   </div>
 </section>
 
 <section>
   <div class="content-5">
-    <img src="../kakaobank/kaka.img/main-foreignRemittance-new.png" alt="">
+    <img src="./kaka.img/main-foreignRemittance-new.png" alt="">
 
     <div class="conGRE">
       <h3>해외계좌송금과<br>WU빠른해외송금을<br>더 쉽고, 저렴하게</h3>
@@ -138,7 +138,7 @@
       <a href="#"><button>전월세보증금 대출 ></button></a>
       </div>
 
-      <img src="../kakaobank/kaka.img/main-loan.png" alt="">
+      <img src="./kaka.img/main-loan.png" alt="">
     </div>
   </div>
   </section>
@@ -146,8 +146,17 @@
 <section>
   <div class="fren">
     <div class="ifren">
-      
+      <h3>프렌즈 체크카드,<br>내가 고르는 선택의 즐거움</h3>
+      <p>프렌즈 디자인부터 멋스러운 블랙 컬러 카드까지 원하는 디자인과 기능을
+      선택할 수 있다</p>
+      <a href="#"><button>카카오뱅크 프렌즈 체크카드</button></a>
     </div>
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
   </div>
 </section>
 </body>
