--- a/kakaobank.html
+++ b/kakaobank.html
@@ -22,10 +22,10 @@
       
       <div class="kakao-mn">
         <ul class="main-menu">
-          <li>은행소개</li>
-          <li>IR투자정보</li>
-          <li>상품안내</li>
-          <li>고객소개</li>
+          <li><a href="javascript:void(0)">은행소개</a></li>
+          <li><a href="javascript:void(0)">IR투자정보</a></li>
+          <li><a href="javascript:void(0)">상품안내</a></li>
+          <li><a href="javascript:void(0)">고객소개</a></li>
         </ul>
 
         <select class="kakao-focus">
@@ -151,12 +151,11 @@
       선택할 수 있다</p>
       <a href="#"><button>카카오뱅크 프렌즈 체크카드</button></a>
     </div>
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
+    <img src="./kaka.img/card-1.png" alt="">
+    <img src="./kaka.img/card-2.png" alt="">
+    <img src="./kaka.img/card-3.png" alt="">
+    <img src="./kaka.img/card-4.png" alt="">
+    <img src="./kaka.img/card-5.png" alt="">
   </div>
 </section>
 </body>
