--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <link rel="stylesheet" href="./css/kakao.css">
 </head>
 <body>
-
   <header>
+  
     <div class="kakaosub">
       <a href="index.html" class="kakaobank">
         <img src="./images/logo_black.svg" alt="kakaobank">
@@ -48,8 +48,8 @@
         <h3>이미 모두의 은행 <br>지금은 카카오뱅크</h3>
         <p>한 사람, 한 사람을 위해 시작한 은행이 <br> 더 많은 사람들이 찾는 모두의 은행이 되었습니다. </p>
         <p>보내고,받고,모으고,쓰는 <br> 당신의 모든 일이 바뀌고 있습니다.</p>
-        <button>Google Play</button>
-        <button>App Store</button>
+        <a href="#"><button>Google Play</button></a>
+        <a href="#"><button>App Store</button></a>
       </div>
     </div>
   </section>
@@ -148,14 +148,17 @@
         <h3>프렌즈 체크카드,<br>내가 고르는 선택의 즐거움</h3>
         <p>프렌즈 디자인부터 멋스러운 블랙 컬러 카드까지 원하는 디자인과 기능을
         선택할 수 있다</p>
-        <a href="#"><button>카카오뱅크 프렌즈 체크카드</button></a>
+        <a href="#"><button>카카오뱅크 프렌즈 체크카드 ></button></a>
       </div>
-      <img src="./images/card-1.png" alt="1">
-      <img src="./images/card-2.png" alt="2">
-      <img src="./images/card-3.png" alt="3">
-      <img src="./images/card-4.png" alt="4">
-      <img src="./images/card-5.png" alt="5">
     </div>
+  </section>
+
+  <section>
+    <img src="./images/card-1.png" alt="1">
+    <img src="./images/card-2.png" alt="2">
+    <img src="./images/card-3.png" alt="3">
+    <img src="./images/card-4.png" alt="4">
+    <img src="./images/card-5.png" alt="5">
   </section>
 
   </body>
