--- a/index.html
+++ b/index.html
@@ -156,24 +156,24 @@
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-               <img src="images/card-1.png" alt="">
-               <a href="javascript:void(0)" class="btn"></a>
+                <img src="images/card-1.png" alt="">
+                <a href="javascript:void(0)" class="btn"></a>
               </div>
               <div class="swiper-slide">
-               <img src="images/card-2.png" alt="">
-               <a href="javascript:void(0)" class="btn"></a>
+                <img src="images/card-2.png" alt="">
+                <a href="javascript:void(0)" class="btn"></a>
               </div>
               <div class="swiper-slide">
-               <img src="images/card-3.png" alt="">
-               <a href="javascript:void(0)" class="btn"></a>
+                <img src="images/card-3.png" alt="">
+                <a href="javascript:void(0)" class="btn"></a>
               </div>
               <div class="swiper-slide">
-               <img src="images/card-4.png" alt="">
-               <a href="javascript:void(0)" class="btn"></a>
+                <img src="images/card-4.png" alt="">
+                <a href="javascript:void(0)" class="btn"></a>
               </div>
               <div class="swiper-slide">
-               <img src="images/card-5.png" alt="">
-               <a href="javascript:void(0)" class="btn"></a>
+                <img src="images/card-5.png" alt="">
+                <a href="javascript:void(0)" class="btn"></a>
               </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -184,5 +184,60 @@
       </div>
     </div>
   </section>
+
+  <section>
+    <div class="project-6">
+      <div class="fontcon">
+        <h3>IT 기술로 카카오뱅크를<br>만들어 갑니다.</h3>
+        <p>_</p>
+      </div>
+      <div class="kaimg">
+      <img src="./images/home_it.png" alt="">
+      </div>
+
+      <ul class="textcon">
+        <li>
+          <h3>간결하고 유려하게</h3>
+          <ul class="txt">
+            <li>작은 모바일 화면에 적합하도록<br>복잡함을 덜어낸<br> 유러하고 친화적인 UX</li>
+          </ul>
+        </li>
+        <li>
+          <h3>간편한 인증, 철저한 보안</h3>
+          <ul class="txt">
+            <li>지문, 비밀번호로 간편한 인증<br>IT기술의 강력한 보안 검증과<br>데이터 암호화</li>
+          </ul>
+        </li>
+        <li></li>
+        <li>
+          <h3>Mobile First, One App</h3>
+          <ul class="txt">
+            <li>모바일에서 뱅킹이 더 쉽고 편리하게<br>여러 앱을 설치할 필요 없이<br>하나의 앱으로</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </section>
+
+  <footer>
+    <ul class="foocon">
+        <li>
+        <a href="#">모바일 서비스 이용약관</a>
+        <a href="#">전자금융거래 기본약관</a>
+        <a href="#">위치기반 서비스 이용약관</a>
+        <a href="#">개인정보처리방침</a>
+        <a href="#">전자민원접수</a>
+        <a href="#">보호금융상품등록부</a>
+        <a href="#">상품공시실</a>
+        <a href="#">경영공시</a>
+        <a href="#">공시사항</a>
+        <br>
+        <a href="#">전자서명인증업무준칙</a>
+        <a href="#">카카오뱅크 인증서 서비스 이용약관</a>
+        <a href="#">카카오뱅크 인증서 서비스 개인정보처리방침</a>
+      </li>
+    </ul>
+
+  </footer>
   </body>
 </html>
