--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
           <h3>이미 모두의 은행 <br>지금은 카카오뱅크</h3>
           <p>한 사람, 한 사람을 위해 시작한 은행이 <br> 더 많은 사람들이 찾는 모두의 은행이 되었습니다. </p>
           <p>보내고,받고,모으고,쓰는 <br> 당신의 모든 일이 바뀌고 있습니다.</p>
-          <button><a href="#">Google Play</a></button>
-          <button><a href="#">App Store</a></button>
+          <input type="button" value="Google play" class="btno-1">
+          <input type="button" value="App Store" class="btno-2">
         </div>
       </div>
     </section>
@@ -64,7 +64,7 @@
           <h3>모바일로 더 손쉬운 <br>계좌개설, 간편한 이체</h3>
           <p>인증서, OTP 없이 개좌 개설이 간편합니다.<br>
           여러 건의 이체도 몇 번의 터치로 손쉽게 보낼 수 있습니다.</p>
-          <button><a href="#">카카오뱅크 입출금통장 ></a></button>
+          <input type="button" value="카카오뱅크 입출금통장 >" class="btno-3">
         </div>
       </div>
     </section>
@@ -76,8 +76,8 @@
           <h3>우대조건 없이<br>합리적인 예금과 적금</h3>
           <p>기대했던 금리와 다르게 복잡한 우대조건에 실망한 적이 있었나요? <br>
           카카오뱅크의 예금, 적금은 숨겨진 우대조건 없이 누구에게나 편리하고 합리적입니다.</p>
-          <button><a href="#">정기예금 ></a></button>
-          <button><a href="#">정기예금 ></a></button>
+          <input type="button" value="정기예금 >" class="btno-4">
+          <input type="button" value="자유적금 >" class="btno-5">
           <img src="./images/main-savings-money.png" alt="">
         </div>
 
@@ -94,7 +94,7 @@
           <p>카카오톡 친구를 바로 모임통장으로 초대하고 <br>
           친구들과 함께 잔액과 입출금 현황을 확인할 수 있습니다.<br>
           재미있는 메시지 카드로 회비 입금 요청도 해보세요.</p>
-          <button><a href="#">모임통장 ></a></button>
+          <input type="button" value="모임통장 >" class="btno-5">
         </div>
       </div>
     </section>
@@ -105,7 +105,7 @@
           <h3>함께 도전해서<br>재미있는 26주적금</h3>
           <p>26주동안 변화하는 재미에 빠져있는 사이<br>
           어느덧 만기 달성 경험을 맛보게 됩니다.</p>
-          <button><a href="#">26주적금 ></a></button>
+          <input type="button" value="26주적금 >" class="btno-6">
         </div>
 
         <img src="./images/main-26weeks.png" alt="">
@@ -122,7 +122,7 @@
           전세계 200여개국으로<br>
           WU빠른해외송금이 가능합니다.
           </p>
-          <button><a href="#">해외송금 ></a></button>
+          <input type="button" value="해외송금 >" class="btno-7">
         </div>
       </div>
     </section>
@@ -134,10 +134,11 @@
           <p>이사 날짜가 주말이나 공휴일이어도 전월세보증금 대출을 신청할 수 있다.</p>
 
           <div class="gbtn">
-            <button><a href="#">마이너스 통장대출 ></a></button>
-            <button><a href="#">신용대출 ></a></button>
-            <button><a href="#">개인사업자 대출 ></a></button>
-            <button><a href="#">전월세보증금 대출 ></a></button>
+          <input type="button" value="마이너스 통장대출 >" class="btno-8">
+          <input type="button" value="신용대출 >" class="btno-8">
+          <input type="button" value="개인사업자 대출 >" class="btno-8">
+          <input type="button" value="전월세보증금 대출 >" class="btno-8">
+
           </div>
 
           <img src="./images/main-loan.png" alt="">
@@ -151,7 +152,7 @@
           <h3>프렌즈 체크카드,<br>내가 고르는 선택의 즐거움</h3>
           <p>프렌즈 디자인부터 멋스러운 블랙 컬러 카드까지 원하는 디자인과 기능을
           선택할 수 있다</p>
-          <button><a href="#">카카오뱅크 프렌즈 체크카드 ></a></button>
+          <input type="button" value="카카오뱅크 프렌즈 체크카드 >" class="btno-9">
         
           <div class="promotion">
             <div class="swiper">
