--- a/index.html
+++ b/index.html
@@ -25,7 +25,39 @@
         
         <div class="kakao-mn">
           <ul class="main-menu">
-            <li><a href="javascript:void(0)">은행소개</a></li>
+            <li class="sumenu">
+            <a href="javascript:void(0)">은행소개</a>
+              <ul class="inner">
+                <li>
+                  <h4>카카오뱅크</h4>
+                  <ul>
+                    <li>브랜드</li>
+                    <li>주주사 소개</li>
+                    <li>오시는 길</li>
+                    <li>제휴문의</li>
+                    <li>금융기술연구소</li>
+                    <li>카카오뱅크 인증서</li>
+                  </ul>
+                </li>
+                <li>
+                  <h4>윤리경영</h4>
+                  <ul>
+                    <li>윤리강령</li>
+                    <li>임직원행동기준</li>
+                  </ul>
+                </li>
+                <li>
+                  <h4>새소식</h4>
+                  <ul>
+                    <li>공지상항</li>
+                    <li>입찰공고</li>
+                  </ul>
+                </li>
+                <li>
+                  <h4>인재영입</h4>
+                </li>
+              </ul>
+            </li>
             <li><a href="javascript:void(0)">IR투자정보</a></li>
             <li><a href="javascript:void(0)">상품안내</a></li>
             <li><a href="javascript:void(0)">고객소개</a></li>
