--- a/sample.html
+++ b/sample.html
@@ -218,7 +218,7 @@
         </li>
       </ul>
 
-      <select class="kakao-focus">
+      <!-- <select class="kakao-focus">
         <option>카카오뱅크</option>
         <option>카카오뱅크 인증서</option>
         <option>금융기술연구원</option>
@@ -226,8 +226,36 @@
       </select>
       <a href="#" class="icon">
         <img src="./images/icon_eng.svg" alt="icon">
-      </a>
+      </a> -->
     </div>
   </header>
+
+  <section>
+    <div class="slowUl">
+      <ul class="slowbox">
+        <li>
+          <h5>관련사이트</h5>
+          <ul>
+            <li>카카오뱅크</li>
+            <li>카카오뱅크 인증서</li>
+            <li>금융기술연구소</li>
+            <li>기술블로그</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+          
+    <div class="staticon">
+      <span class="material-symbols-outlined">stat_minus_1</span>
+    </div>
+
+
+    <!-- <div class="search">
+      <input type="text">
+      <div class="serchicon">
+      <span class="material-icons">search</span>
+      </div>
+    </div> -->
+  </section>
 </body>
 </html>
