--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="./css/kakao.css">
 
-  <script defer src="./kakao.js/kakao.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script defer src="./kakao.js/kakao.js"></script>
+
 </head>
 <body>
   <header>
@@ -249,7 +251,9 @@
         <p>한 사람, 한 사람을 위해 시작한 은행이 <br> 더 많은 사람들이 찾는 모두의 은행이 되었습니다. </p>
         <p>보내고,받고,모으고,쓰는 <br> 당신의 모든 일이 바뀌고 있습니다.</p>
         <input type="button" value="Google play" class="btno-1">
+        <img src="./images/google-play.png" alt="" class="google-play">
         <input type="button" value="App Store" class="btno-2">
+        <img src="./images/apple-logo.png" alt="" class="apple-logo">
       </div>
     </div>
   </section>
@@ -276,7 +280,7 @@
         <input type="button" value="자유적금 >" class="btno-5">
         <img src="./images/main-savings-money.png" alt="">
       </div>
-      <img src="./images/main-savings.png" alt="">
+      <img src="./images/main-savings.png" alt="" class="savings">
     </div>
   </section>
 
