--- a/index.html
+++ b/index.html
@@ -286,40 +286,45 @@
 
   <section>
     <div class="content-3">
-      <img src="./images/main-moim.png" alt="">
-      <div class="traveling">
-        <h3>함께 쓰고 같이 보는<br>모임통장</h3>
-        <p>카카오톡 친구를 바로 모임통장으로 초대하고 <br>
-        친구들과 함께 잔액과 입출금 현황을 확인할 수 있습니다.<br>
-        재미있는 메시지 카드로 회비 입금 요청도 해보세요.</p>
-        <input type="button" value="모임통장 >" class="btno-5">
+      <div class="map-3">
+        <img src="./images/main-moim.png" alt="">
+        <div class="traveling">
+          <h3>함께 쓰고 같이 보는<br>모임통장</h3>
+          <p>카카오톡 친구를 바로 모임통장으로 초대하고 <br>
+          친구들과 함께 잔액과 입출금 현황을 확인할 수 있습니다.<br>
+          재미있는 메시지 카드로 회비 입금 요청도 해보세요.</p>
+          <input type="button" value="모임통장 >" class="btno-5">
+        </div>
       </div>
     </div>
   </section>
 
   <section>
     <div class="content-4">
-      <div class="week">
-        <h3>함께 도전해서<br>재미있는 26주적금</h3>
-        <p>26주동안 변화하는 재미에 빠져있는 사이<br>
-        어느덧 만기 달성 경험을 맛보게 됩니다.</p>
-        <input type="button" value="26주적금 >" class="btno-6">
+      <div class="map-4">
+        <div class="week">
+          <h3>함께 도전해서<br>재미있는 26주적금</h3>
+          <p>26주동안 변화하는 재미에 빠져있는 사이<br>
+          어느덧 만기 달성 경험을 맛보게 됩니다.</p>
+          <input type="button" value="26주적금 >" class="btno-6">
+        </div>
+        <img src="./images/main-26weeks.png" alt="">
       </div>
-
-      <img src="./images/main-26weeks.png" alt="">
     </div>
   </section>
 
   <section>
     <div class="content-5">
-      <img src="./images/main-foreignRemittance-new.png" alt="">
-      <div class="conGRE">
-        <h3>해외계좌송금과<br>WU빠른해외송금을<br>더 쉽고, 저렴하게</h3>
-        <p>해외계좌송금이 가능한 22개국을 포함하여 <br>
-        전세계 200여개국으로<br>
-        WU빠른해외송금이 가능합니다.
-        </p>
-        <input type="button" value="해외송금 >" class="btno-7">
+      <div class="map-5">
+      <img src="./images/main-foreignRemittance-new.png" alt="" class="foreig">
+        <div class="conGRE">
+          <h3>해외계좌송금과<br>WU빠른해외송금을<br>더 쉽고, 저렴하게</h3>
+          <p>해외계좌송금이 가능한 22개국을 포함하여 <br>
+          전세계 200여개국으로<br>
+          WU빠른해외송금이 가능합니다.
+          </p>
+          <input type="button" value="해외송금 >" class="btno-7">
+        </div>
       </div>
     </div>
   </section>
