--- a/index.html
+++ b/index.html
@@ -331,16 +331,18 @@
 
   <section>
     <div class="sky">
-      <div class="moon">
-        <h3>복잡한 서류 제출을 간편하게, 내가 원하는 시간에</h3>
-        <p>이사 날짜가 주말이나 공휴일이어도 전월세보증금 대출을 신청할 수 있다.</p>
-        <div class="gbtn">
-        <input type="button" value="마이너스 통장대출 >" class="btno-8">
-        <input type="button" value="신용대출 >" class="btno-8">
-        <input type="button" value="개인사업자 대출 >" class="btno-8">
-        <input type="button" value="전월세보증금 대출 >" class="btno-8">
+      <div class="skyul">
+        <div class="moon">
+          <h3>복잡한 서류 제출을 간편하게, 내가 원하는 시간에</h3>
+          <p>이사 날짜가 주말이나 공휴일이어도 전월세보증금 대출을 신청할 수 있다.</p>
+          <div class="gbtn">
+          <input type="button" value="마이너스 통장대출 >" class="btno-8">
+          <input type="button" value="신용대출 >" class="btno-8">
+          <input type="button" value="개인사업자 대출 >" class="btno-8">
+          <input type="button" value="전월세보증금 대출 >" class="btno-8">
+          </div>
+          <img src="./images/main-loan.png" alt="">
         </div>
-        <img src="./images/main-loan.png" alt="">
       </div>
     </div>
   </section>
@@ -389,7 +391,7 @@
     <div class="project-6">
       <div class="fontcon">
         <h3>IT 기술로 카카오뱅크를<br>만들어 갑니다.</h3>
-        <p>_</p>
+        <p><span class="material-icons">maximize</span></p>
       </div>
       <div class="kaimg">
       <img src="./images/home_it.png" alt="">
